--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "react": "^16.13.0",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^16.13.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
