--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^16.13.0",
+    "react-redux": "^8.0.5",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "semver": "6.3.0",
