--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "chinese-cheese",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js"
+  },
+  "homepage": "./",
   "dependencies": {
     "@babel/core": "7.8.4",
     "@reduxjs/toolkit": "^1.9.2",
@@ -64,10 +69,6 @@
     "webpack-dev-server": "3.10.2",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
-  },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js"
   },
   "eslintConfig": {
     "extends": "react-app"
