--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js"
   },
-  "homepage": "./",
+  "homepage": "https://weisiwu.github.io/chinese-cheese/build/",
   "dependencies": {
     "@babel/core": "7.8.4",
     "@reduxjs/toolkit": "^1.9.2",
