--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "deploy": "node scripts/build.js && git add . && git commit -m 'chore: 部署改动' && git push"
   },
   "homepage": "https://weisiwu.github.io/chinese-cheese/build/",
   "dependencies": {
