--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "deploy": "node scripts/build.js && git add . && git commit -m 'chore: 部署改动' && git push"
+    "deploy": "node scripts/build.js && git add . && git commit -m 'chore: 部署改动' && git push",
+    "snapshots": "node scripts/snapshots.js"
   },
   "homepage": "https://weisiwu.github.io/chinese-cheese/build/",
   "dependencies": {
@@ -25,6 +26,7 @@
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "3.4.2",
+    "dom-to-image": "^2.6.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
@@ -38,6 +40,7 @@
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
+    "html2canvas": "^1.4.1",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
