--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest-watch-typeahead": "0.4.2",
     "less-loader": "^6.2.0",
     "mini-css-extract-plugin": "0.9.0",
+    "moment": "^2.29.4",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.0",
     "postcss-flexbugs-fixes": "4.1.0",
